# llm-cockpit

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.cowork/: CLAUDE_CODE_PROMPT_HOTFIX_DB_PERF.md  CLAUDE_CODE_PROMPT_SPRINT2_FIXUP.md  CLAUDE_CODE_PROMPT_SPRINT2_MVP.md  CLAUDE_CODE_PROMPT_SPRINT3_UC02.md  CLAUDE_CODE_PROMPT_SPRINT4_CHAT_CODE.md  CLAUDE_CODE_PROMPT_SPRINT5B_DASHBOARD_UX.md  CLAUDE_CODE_PROMPT_SPRINT5_CHAT_UX.md  CLAUDE_CODE_PROMPT_SPRINT6_UC06_USERS.md  CLAUDE_CODE_PROMPT_SPRINT7_AUTH_UX.md  CLAUDE_CODE_PROMPT_SPRINT8_AND_9_COMBINED.md  CLAUDE_CODE_PROMPT_SPRINT8_UC03_HISTORY.md  CLAUDE_CODE_PROMPT_SPRINT9_UC10_ADMIN_OLLAMA.md  CLAUDE_CODE_PROMPT_UC07.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml  testpypi.yml
backend/: pyproject.toml
backend/app/: __init__.py  cli.py  config.py  main.py
docs/: STATUS.md  SYNC.md
docs/architecture/: COMPONENTS.md
docs/decisions/: ADR-001-mirror-agentic-blox-process.md  ADR-002-stack-choices-and-delivery-form.md  ADR-003-public-release-framing.md  ADR-004-role-ladder.md  ADR-005-per-model-lifecycle-v0_1.md  ADR-INDEX.md
docs/design-principles/: DP-INDEX.md
docs/lessons-learned/: LL-001-gpu1-placement.md  LL-INDEX.md
docs/process/: PROCESS.md  SPRINT_STATE.md
docs/specs/: README.md
docs/specs/functional/: UC-01-login.md  UC-02-dashboard-live.md  UC-02-dashboard-placement-v1_2-draft.md  UC-03-dashboard-history.md  UC-04-chat-page.md  UC-05-code-page.md  UC-06-admin-controls.md  UC-07-scheduler-routing.md  UC-08-installation-bootstrap.md  UC-09-first-login-password-change.md  UC-10-ollama-configuration.md  UC-11-pypi-publish.md  UC-12-ui-refresh.md  US-01-login.md  US-02-dashboard-live.md  US-03-dashboard-history.md  US-04-chat-page.md  US-05-code-page.md  US-06-admin-controls.md  US-07-scheduler-routing.md  US-08-installation-bootstrap.md  US-09-first-login-password-change.md  US-10-ollama-configuration.md
docs/specs/test/: UC-01-login.md  UC-02-dashboard-live.md  UC-03-dashboard-history.md  UC-04-chat-page.md  UC-05-code-page.md  UC-06-admin-controls.md  UC-07-scheduler-routing.md  UC-08-installation-bootstrap.md  UC-09-first-login-password-change.md  UC-10-ollama-configuration.md  UC-11-pypi-publish.md  UC-12-ui-refresh.md  US-01-login.md  US-02-dashboard-live.md  US-03-dashboard-history.md  US-04-chat-page.md  US-05-code-page.md  US-06-admin-controls.md  US-07-scheduler-routing.md  US-08-installation-bootstrap.md  US-09-first-login-password-change.md  US-10-ollama-configuration.md
docs/specs/user/: US-01-login.md  US-02-dashboard-live.md  US-03-dashboard-history.md  US-04-chat-page.md  US-05-code-page.md  US-06-admin-controls.md  US-07-scheduler-routing.md  US-08-installation-bootstrap.md  US-09-first-login-password-change.md  US-10-ollama-configuration.md
docs/use-cases/: README.md  UC-01-login.md  UC-02-dashboard-live.md  UC-03-dashboard-history.md  UC-04-chat-page.md  UC-05-code-page.md  UC-06-admin-controls.md  UC-07-scheduler-routing.md  UC-08-installation-bootstrap.md  UC-09-first-login-password-change.md  UC-10-ollama-configuration.md  UC-11-pypi-publish.md  UC-12-ui-refresh.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/change-password/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/code/: page.tsx
frontend/app/conductor/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: AppHeader.tsx  ChatShell.tsx  CodeBlock.tsx  DashboardHistory.tsx  Providers.tsx
frontend/lib/: api.ts  auth-store.ts  dark-mode.ts  dashboard-types.ts
scripts/: build-frontend.sh  sync-docs-from-vault.sh
src/cockpit/: __init__.py  cli.py  config.py  db.py  deps.py  main.py  models.py  schemas.py
src/cockpit/adapters/: fake_chat.py  fake_telemetry.py  ollama_catalog.py  ollama_chat.py  telemetry.py
src/cockpit/default_config/: code_default_system_prompt.md  config.toml.j2  model_tag_heuristics.yaml
src/cockpit/frontend_dist/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  index.html  index.txt
src/cockpit/migrations/: env.py
src/cockpit/ports/: llm_chat.py  telemetry.py
src/cockpit/routers/: admin_audit.py  admin_ollama.py  admin_users.py  auth.py  chat.py  code.py  code_files.py  conductor.py  dashboard.py  (+1 more)
tests/: conftest.py  test_cli.py  test_code_files.py  test_conductor_snapshot.py  test_doctor.py  test_init.py  test_migrate_and_bind.py  test_model_tag_heuristic.py  test_sprint7_auth.py  test_sprint8_history.py  test_sprint9_admin_ollama.py  test_uc01_auth.py  test_uc02_dashboard.py  test_uc02_telemetry.py  test_uc04_chat.py  test_uc05_code.py  test_uc06_users.py  test_uc07_port.py  test_uc08_serve.py  test_uc09_change_password.py
(+196 files in other folders)
