[project]
name = "llm-cockpit-backend"
version = "0.1.0"
description = "FastAPI backend for the llm-cockpit dashboard + chat UI"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "alembic>=1.13",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "python-jose[cryptography]>=3.3",
  "bcrypt>=4.2",
  "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
]

[project.scripts]
cockpit-admin = "app.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py312"
